test/files/neg/elide-to-nothing.check
elide-to-nothing.scala:14: error: Cannot elide where Nothing is required.
  val b: Nothing = unimplemented()
                                ^
one error found
